--- a/main.css
+++ b/main.css
@@ -1,74 +1,207 @@
-html, body, header, #intro {
+/* Custom Color Variables */
+:root {
+  --blue: #4285f4;
+  --purple: #304ffe;
+  --darkgrey: #24355c;
+  --offwhite: #F5F5F5;
+  --smallfont: 0.6rem;
+}
+
+/* Dark Theme Variables */
+[data-theme="dark"] {
+  --blue: #3B78DC;
+  --purple: #6E84FE;
+  --darkgrey: #ECF3FE;
+  --offwhite: #142849;
+  --smallfont: 0.6rem;
+}
+
+.edge-header {
+  background: #333;
+  background: -webkit-gradient(radial, center, center, 120, center center, 900, from(var(--blue), to var(--purple)));
+  background: -moz-radial-gradient(circle, var(--blue), var(--purple));
+}
+
+[data-theme="dark"] .top-nav-collapse,
+.edge-header {
+  background: #333;
+  background: -webkit-gradient(radial, center center, 120, center center, 900, from(#33495E), to(#2E2329));
+  background: -moz-radial-gradient(circle, #33495E, #2E2329);
+}
+
+[data-theme="dark"] .card-body {
+  background-color: #285092;
+  color: var(--darkgrey);
+  border: #285092;
+}
+
+[data-theme="dark"] .card-header {
+  background-color: #285092 !important;
+  color: var(--darkgrey) !important;
+}
+
+[data-theme="dark"] #directionsPanel {
+  background-color: var(--darkgrey);
+  color: var(--offwhite);
+  border: #285092;
+}
+
+[data-theme="dark"] a {
+  color: var(--purple);
+}
+
+[data-theme="dark"] body {
+  color: var(--darkgrey);
+}
+
+[data-theme="dark"] input[type="text"],
+input[type="email"],
+#form2,
+#form8,
+.bmd-label-floating,
+.bmd-label-placeholder,
+#contact-send-btn {
+  color: var(--darkgrey) !important;
+}
+
+[data-theme="dark"] #contact-send-btn,
+#face-btn {
+  background: #333 !important;
+  background: -webkit-gradient(radial, center center, 120, center center, 900, from(#33495E), to(#2E2329)) !important;
+  background: -moz-radial-gradient(circle, #33495E, #2E2329) !important;
+}
+
+html,
+body,
+header,
+#intro {
   height: 100%;
 }
 
+.darkCard {
+  background-color: #285092;
+  color: #ECF3FE;
+  border: #285092;
+}
+
 #intro {
-  background: url("img/freestocks-org-485685-unsplash.jpg")no-repeat center center fixed;
+  background: no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   -webkit-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
 }
 
 .top-nav-collapse {
-  background-color: #24355c;
+  background-color: var(--darkgrey);
 }
 
 @media (max-width: 768px) {
   .navbar:not(.top-nav-collapse) {
-    background-color: #24355c;
+    background-color: var(--darkgrey);
     -webkit-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
   }
+
+  [data-theme="dark"] .navbar:not(.top-nav-collapse) {
+    background-color: #1D2F98;
+  }
+
   #titleh1 {
     font-size: 1.6rem !important;
     margin-top: 1.4em !important;
     padding-top: 2em !important;
   }
+
   #titleh2 {
     font-size: 1.6rem !important;
   }
+
   #titledesc {
-    font-size: 0.6rem !important;
+    font-size: var(--smallfont) !important;
   }
+
   #titledesc2 {
-    font-size: 0.6rem !important;
+    font-size: var(--smallfont) !important;
   }
+
   #titlespan {
-    font-size: 0.6rem !important;
+    font-size: var(--smallfont) !important;
   }
+
   #freestocks {
-    font-size: 0.6rem !important;
+    font-size: var(--smallfont) !important;
   }
 }
 
 @media (min-width: 800px) and (max-width: 850px) {
   .navbar:not(.top-nav-collapse) {
-    background-color: #24355c;
+    background-color: var(--darkgrey);
     -webkit-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+  }
+
+  [data-theme="dark"] .navbar:not(.top-nav-collapse) {
+    background-color: #1D2F98;
+  }
+
+  #titleh1 {
+    font-size: 1.6rem !important;
+    margin-top: 1.4em !important;
+    padding-top: 2em !important;
+  }
+
+  #titleh2 {
+    font-size: 1.6rem !important;
+  }
+
+  #titledesc {
+    font-size: var(--smallfont) !important;
+  }
+
+  #titledesc2 {
+    font-size: var(--smallfont) !important;
+  }
+
+  #titlespan {
+    font-size: var(--smallfont) !important;
+  }
+
+  #freestocks {
+    font-size: var(--smallfont) !important;
   }
 }
 
 .icon {
   font-size: 1.2em;
   vertical-align: -8%;
-  color: #4285f4;
+  color: var(--blue);
   -webkit-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
 }
 
-.icon-user, .icon-envelope, .icon-megaphone, .icon-pencil1, .icon-paper-plane {
-  color: #304ffe !important;
-}
-
-.fa-map-marker-alt, .fa-phone, .fa-envelope {
-  color: #304ffe !important;
+.icon-user,
+.icon-envelope,
+.icon-megaphone,
+.icon-pencil1,
+.icon-paper-plane,
+.fa-map-marker-alt,
+.fa-phone,
+.fa-envelope,
+.icon-location2 {
+  color: var(--purple) !important;
 }
 
 .icon-info-with-circle {
   font-size: 1.6em;
   vertical-align: -16%;
   postion: relative;
-  -webkit-transform: translate3d(0, 0, 0);
 }
 
 .icon-pacman {
@@ -78,22 +211,25 @@ html, body, header, #intro {
   margin: 0;
   position: relative;
   right: -8%;
-  color: #4285f4;
+  color: var(--blue);
 }
 
 main {
-  background: #f5f5f5;
+  background: var(--offwhite);
 }
 
-.collapsed, .collapsed:hover, .collapsed:focus, .collapsed:active {
+.collapsed,
+.collapsed:hover,
+.collapsed:focus,
+.collapsed:active {
   text-decoration: none !important;
 }
 
 .input[type:text]:focus {
   content: "";
-  -webkit-transform: translate3d(0, 0, 0);
 }
 
+/* Google Map */
 #map {
   height: 100%;
 }
@@ -110,6 +246,8 @@ main {
   margin-left: 0;
   margin-right: 0;
   -webkit-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
 }
 
 .map-container iframe {
@@ -119,4 +257,294 @@ main {
   width: 100%;
   position: absolute;
   -webkit-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+}
+
+/* Font size hacks */
+html {
+  font-size: 1rem !important;
+  -webkit-font-smoothing: antialiased;
+}
+
+@include media-breakpoint-up(sm) {
+  html {
+    font-size: 1.35rem !important;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  html {
+    font-size: 1.6rem !important;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  html {
+    font-size: 1.6rem !important;
+  }
+}
+
+/* Theme switch dongle */
+.theme-switch-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.theme-switch-wrapper em {
+  margin-left: 10px;
+  font-size: 1rem;
+}
+
+.switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+}
+
+.switch input {
+  display: none;
+}
+
+.slider {
+  background-color: #ccc;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: .4s;
+  -webkit-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+}
+
+.slider:before {
+  background-color: #fff;
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: .4s;
+  width: 26px;
+}
+
+input:checked+.slider {
+  background-color: #00695c;
+}
+
+input:checked+.slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 0.45em;
+  background-color: var(--offwhite);
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: var(--offwhite);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: var(--blue);
+}
+
+::-webkit-scrollbar-track-piece {
+  background-color: transparent !important;
+  -webkit-border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  height: 20px !important;
+  -webkit-border-radius: 6px;
+}
+
+/* Nice Loading Spinner (3 shuffling Balls) */
+.loader {
+  margin: 240px auto;
+  font-weight: 600;
+}
+
+.loader span {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  left: 50%;
+  margin-left: -10px;
+  -webkit-animation: 3s infinite linear;
+  -moz-animation: 3s infinite linear;
+  -o-animation: 3s infinite linear;
+
+}
+
+.loader span:nth-child(2) {
+  background: #4285F4;
+  -webkit-animation: kiri 2s infinite linear;
+  -moz-animation: kiri 2s infinite linear;
+  -o-animation: kiri 2s infinite linear;
+
+}
+
+.loader span:nth-child(3) {
+  background: #2BBBAD;
+  z-index: 100;
+}
+
+.loader span:nth-child(4) {
+  background: #aa66cc;
+  -webkit-animation: kanan 2s infinite linear;
+  -moz-animation: kanan 2s infinite linear;
+  -o-animation: kanan 2s infinite linear;
+}
+
+@-webkit-keyframes kanan {
+  0% {
+    -webkit-transform: translateX(35px);
+  }
+
+  50% {
+    -webkit-transform: translateX(-35px);
+  }
+
+  100% {
+    -webkit-transform: translateX(35px);
+    z-index: 200;
+  }
+}
+
+@-moz-keyframes kanan {
+  0% {
+    -moz-transform: translateX(35px);
+  }
+
+  50% {
+    -moz-transform: translateX(-35px);
+  }
+
+  100% {
+    -moz-transform: translateX(35px);
+    z-index: 200;
+  }
+}
+
+@-o-keyframes kanan {
+  0% {
+    -o-transform: translateX(35px);
+  }
+
+  50% {
+    -o-transform: translateX(-35px);
+  }
+
+  100% {
+    -o-transform: translateX(35px);
+    z-index: 200;
+  }
+}
+
+
+@-webkit-keyframes kiri {
+  0% {
+    -webkit-transform: translateX(-35px);
+    z-index: 200;
+  }
+
+  50% {
+    -webkit-transform: translateX(35px);
+  }
+
+  100% {
+    -webkit-transform: translateX(-35px);
+  }
+}
+
+@-moz-keyframes kiri {
+  0% {
+    -moz-transform: translateX(-35px);
+    z-index: 200;
+  }
+
+  50% {
+    -moz-transform: translateX(35px);
+  }
+
+  100% {
+    -moz-transform: translateX(-35px);
+  }
+}
+
+@-o-keyframes kiri {
+  0% {
+    -o-transform: translateX(-35px);
+    z-index: 200;
+  }
+
+  50% {
+    -o-transform: translateX(35px);
+  }
+
+  100% {
+    -o-transform: translateX(-35px);
+  }
+}
+
+/* Google Map Controls */
+.controls {
+  margin-top: 10px;
+  border: 1px solid transparent;
+  border-radius: 2px 0 0 2px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  height: 32px;
+  outline: none;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+#origin-input,
+#destination-input {
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  margin-left: 12px;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 200px;
+}
+
+#origin-input:focus,
+#destination-input:focus {
+  border-color: #4d90fe;
+}
+
+#mode-selector {
+  color: #fff;
+  background-color: #4d90fe;
+  margin-left: 12px;
+  padding: 5px 11px 0px 11px;
+}
+
+#mode-selector label {
+  font-family: Roboto;
+  font-size: 13px;
+  font-weight: 300;
 }
